Mudanças de estilos

--- a/Estilos/FETECH.css
+++ b/Estilos/FETECH.css
@@ -27,9 +27,9 @@ header{
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.322);
 }
 #logo{
-    font-family: 'fontetitulo', sans-serif;
+    font-family: 'fontetitulo';
     font-size: 65px;
-    color: black;
+    color: rgba(0, 0, 0, 0.603);
     text-shadow: 2px 2px 4px #1b4747;
     border-radius: 9px;
     padding: 5px 1px;
